--- a/templates/new_user_form.html
+++ b/templates/new_user_form.html
@@ -7,13 +7,13 @@
 
 <form action="/users/new" method="post">
     <label for="firstName">First Name:</label>
-    <input type="text" id="firstName" name="firstName" maxlength="3" required>
+    <input type="text" id="firstName" name="firstName" required>
     <br>
     <label for="lastName">Last Name:</label>
-    <input type="text" id="lastName" name="lastName" maxlength="3" required>
+    <input type="text" id="lastName" name="lastName" required>
     <br>
     <label for="imageURL">Image URL:</label>
-    <input type="text" id="imageURL" name="imageURL" maxlength="3" required>
+    <input type="text" id="imageURL" name="imageURL" required>
     <br>
     
 
