--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -4,15 +4,15 @@
 
 {% block content %}
 
-<form action="//users/{{ user.id }}/edit" method="post">
+<form action="/users/{{ user.id }}/edit" method="post">
     <label for="firstName">First Name:</label>
-    <input type="text" id="firstName" name="firstName" value="{{ user.first_name }}" maxlength="3" required>
+    <input type="text" id="firstName" name="firstName" value="{{ user.first_name }}" required>
     <br>
     <label for="lastName">Last Name:</label>
-    <input type="text" id="lastName" name="lastName" value="{{ user.last_name }}" maxlength="3" required>
+    <input type="text" id="lastName" name="lastName" value="{{ user.last_name }}" required>
     <br>
     <label for="imageURL">Image URL:</label>
-    <input type="text" id="imageURL" name="imageURL" value="{{ user.imageURL }}" maxlength="3" required>
+    <input type="text" id="imageURL" name="imageURL" value="{{ user.imageURL }}" required>
     <br>
     
 
