--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -12,6 +12,10 @@
     <label for="content">Content:</label>
     <input type="text" id="content" name="content" required>
     <br>  
+    {% for tag in post_tags %}
+    <input type="checkbox" id="tag{{ tag.id }}" name="tags" value="{{ tag.id }}">
+    <label for="tag{{ tag.id }}">{{tag.name}}</label>
+    {% endfor %}
     <a href="/users/{{user.id}}">Cancel</a>
     <input type="submit" value="Add">
 </form>
